# Snake-Battle-Royale

./: CMakeLists.txt  main
include/: AI_snake.h  AVLTree.h  Global.h  Map_Functions.h  Model.h  Window.h  game.h  player_snake.h  snake.h
include/Global.dSYM/Contents/: Info.plist
include/Global.dSYM/Contents/Resources/DWARF/: Global
include/eigen3/Eigen/src/Core/: PlainObjectBase
include/eigen3/Eigen/src/Core/PlainObjectBase.dSYM/Contents/: Info.plist
include/eigen3/Eigen/src/Core/PlainObjectBase.dSYM/Contents/Resources/DWARF/: PlainObjectBase
lib/: libraylib.dylib
main.dSYM/Contents/Resources/DWARF/: main
src/cpp/: AI_snake  AI_snake.cpp  AVL_tree  game  game.cpp  main  main.cpp  player_snake.cpp  snake  snake.cpp  window  window.cpp
src/cpp/AI_snake.dSYM/Contents/: Info.plist
src/cpp/AI_snake.dSYM/Contents/Resources/DWARF/: AI_snake
src/cpp/AVL_tree.dSYM/Contents/: Info.plist
src/cpp/AVL_tree.dSYM/Contents/Resources/DWARF/: AVL_tree
src/cpp/game.dSYM/Contents/Resources/DWARF/: game
src/cpp/game.dSYM/Contents/Resources/Relocations/aarch64/: game.yml
src/cpp/main.dSYM/Contents/: Untitled Diagram.drawio
src/cpp/main.dSYM/Contents/Resources/DWARF/: main
src/cpp/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/cpp/snake.dSYM/Contents/Resources/DWARF/: snake
src/cpp/window.dSYM/Contents/: Info.plist
src/cpp/window.dSYM/Contents/Resources/DWARF/: window
